--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/dice_1"
-        android:textSize="30sp">
+        android:src="@drawable/empty_dice"
+        tools:src="@drawable/dice_1">
 
     </ImageView>
 
